fix : step1 - 문자열 계산기 피드백 반영